# lucy-go

./: .gitignore  .gitmodules  doc_api.go  go.mod  go.sum  main.go  main_test.go  makefile  revive.toml  setup.cfg  tools.go
cmd/: lucy.go
internal/db/: bsonBuilding.go  consts.go  db.go  dbInterface.go  requests.go  results.go  staticQueries.go
internal/db/internal/: funcs.go
internal/db/lucymongo/: bsonBuilding.go  bsonStaticQueries.go  consts.go  db.go  dbMethodsCancel.go  dbMethodsCreate.go  dbMethodsGet.go  dbMethodsWorkerUpdate.go
internal/db/lucysql/: consts.go  db.go  dbMethodsCreate.go  dbMethodsGet.go  schema.go  schema.sql  statements.go
internal/messaging/: consts.go  messenger.go  routingKeys.go
internal/prototesting/: hogwarts.pb.go
internal/service/: lucyRPCsCancel.go  lucyRPCsCreateBatch.go  lucyRPCsCreateJob.go  lucyRPCsGet.go  lucyRPCsRunnerStream.go  lucyRPCsWorkerUpdates.go  lucyService.go  service_test.go
lucy/: create.pb.go  errs.go  jobs.pb.go  modelMethods.go  service.pb.go  updates.pb.go
pkg/lucy/: create.pb.go  errs.go  jobs.pb.go  service.pb.go  updates.pb.go  worker.go
service/: lucyRecords.go  lucyRunnerStream.go  lucyService.go  lucyStageUpdates.go  manager.go  service_test.go  streamProgressThrottle.go
service/lucyMessaging/: messenger.go
service/lucydb/: bsonBuilding.go  db.go  staticQueries.go
service/prototesting/: hogwarts.pb.go
zdocs/source/: conf.py
