[version]
target = 0.0
release = 

[metadata]
name = lucy
git_org = github.com/peake100

[testing]
coverage_required = 0.85
test_package = ./...
exclude =
	./cmd
	./pkg/lucy
	./internal/prototesting

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths = 

[proto]
root_source_path = ./lucy_proto
root_go_package = github.com/peake100/lucy-go/
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = lucy
copyright = '2020, Billy Peake'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

